--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Dan's Word Game</title>
+    <title id="main">Dan's Word Game</title>
     <meta charset="utf-8">
    
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,8 +19,8 @@
 
     <p>Can you figure out the word that fits?</p>
 
-    <h3 id="def1">Definition 1</h3>
-    <h3 id="def2">Definition 2</h3>
+    <h3 id="def1">Definition 1</h3><br>
+    <h3 id="def2">Definition 2</h3><br>
 
     <div class="input-group mb-3">
         <input type="text" id="user-answer" class="form-control" placeholder="What's the word?" aria-label="answer" aria-description="submit-answer">
@@ -50,7 +50,7 @@
 
     <div id="history"></div>
 </div>
-
+<br><br>
 <div class="col-md-4">
     <p>Check out the code <a href=https://github.com/dandemarco/wordgame>on GitHub.</a></p>
 </div>
